--- a/Restaurants/Restaurants.csproj
+++ b/Restaurants/Restaurants.csproj
@@ -338,6 +338,7 @@
     <Compile Include="Models\LoginReturnModel.cs" />
     <Compile Include="Models\ResponseModel.cs" />
     <Compile Include="Models\RestaurantMenuCategoryModel.cs" />
+    <Compile Include="Models\RestaurantMenuCriteria.cs" />
     <Compile Include="Models\RestaurantMenuCriteriaModel.cs" />
     <Compile Include="Models\RestaurantMenuItemParameterModel.cs" />
     <Compile Include="Models\RestaurantMenuModel.cs" />
